2004-10-23  Matti Aarnio  <mea@zmailer.org>

	* router/prototypes.h, router/rfc822.c, router/rtsyslog.c:
	    Track and report process RUSAGE (user and system CPU times)
	    if support for that is available.  Can be used to understand
	    system load developments.

	* transports/libta/mimeheaders.c:
	    Sometimes malformed messages undergoing format conversion
	    did cause smtp to drop core.  Turned out to be a mistaken
	    inclusion of the ASCII NUL into scan comparison range of
	    a string scanning.

	* smtpserver/subdaemon-rtr.c, smtpserver/subdaemon-ctf.c:
	    Made slight text changes to help on scanning the log
	    for appearance of internal "<subsys> DELAY %d SECONDS"
	    notes.

	* utils/policy-builder.sh.in:
	    Added a small sed-spell to remove input text line ends
	    since first '#' character in a line.  This allows now
	    adding comments on input line after initial data with
	    that '#' character:
	        example.com   # Added on 2004-Oct-23

2004-10-20  Matti Aarnio  <mea@zmailer.org>

	* transports/errormail/errormail.c, transports/expirer/expirer.c,
	  transports/hold/hold.c, transports/mailbox/mailbox.c,
	  transports/reroute/reroute.c, transports/sm/sm.c,
	  transports/smtp/smtp.c, utils/vacation/vacation.c:
	    Assign 'progname' ALWAYS before  readzenv() call !

2004-10-19  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.c:
	    Report loudly (into log), when DNS lookups take more
	    than 30 seconds.

	* smtpserver/subdaemons.c:
	    There must be at least a dummy pointer init for rate-tracker, too.

	* include/shmmib.h, scheduler/mailq.inc:
	    Added couple subserver task queue tracker variables,
	    and their printouts.  These are debug stuff, but still..

	* smtpserver/smtpserver.c:
	    Note pipeline input along with lack of EHLO greeting!

	* smtpserver/smtpcmds.c:
	    Demand user to authenticate for SUBMISSION/MSA mode
	    MAIL/RCPT commands.

	* smtpserver/smtpserver.h, smtpserver/subdaemon-ctf.c,